--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -714,6 +714,7 @@
                 .search-with-dropdown {
                     position: absolute;
                     border: 0;
+                    cursor: auto;
                     &::before {
                         display: none;
                     }
