--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -305,7 +305,7 @@
       <div class="template-type-sec">
         <perfect-scrollbar>
           <div class="scroll-data">
-            <div class="title">Template Type</div>
+            <div class="title">Layout Type</div>
             <div class="template-type-image" [ngClass]="{'active-type': templateDataBind.layout.layoutType == 'l1'}"
               (click)="templateTypeSelection('l1')">
               <img src="assets/icons/resultTemplate/type-1.svg">
