FLY-3122 issue fixed

--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -79,7 +79,7 @@
                   <img src="assets/icons/result-template/editpencil.svg">
                 </div>
               </div>
-              <div class="values-templates-table" *ngIf="(resultListObj?.groupSetting?.fieldId.length)">
+              <div class="values-templates-table mb-2" *ngIf="(resultListObj?.groupSetting?.fieldId.length)">
                 <div class="table-header-sec row col-12">
                   <div class="title col-5">Values</div>
                   <div class="title col-7">TEMPLATE</div>
