--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -421,7 +421,9 @@ input::placeholder{
     z-index: 100001;
     top: auto;
     right: 0;
-    width: auto;
+    // width: auto;
+	width: 500px;
+	max-width: 500px;
     bottom: 80px;
     left: 0;
     min-width: auto;
